--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,25 +3,23 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+  --background: #1e1f21;
+  --navbar: #28292d;
+  --button: #fff;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: var(--background);
+  padding: 1rem;
+  transition: background 1s;
+  color: #FFFFFF;
+  font-family: 'Noto Sans KR', sans-serif;
+}
+
+.container {
+  margin-top: 1rem;
+  display: flex;
+  max-width: 100%;
+  justify-content: center;
+  align-items: center;
 }
