--- a/src/pages/components/Navbar.module.css
+++ b/src/pages/components/Navbar.module.css
@@ -4,8 +4,8 @@
     gap: 1rem;
     align-items: center;
     border-radius: 10px;
-    padding: 10px;
     font-weight: bold;
+    padding-top: 1rem;
 }
 
 .align {
@@ -25,16 +25,44 @@
     transition: all 0.5s ease;
 }
 
-.logo {
+.button:hover {
+    background-color: var(--button-hover);
+}
+
+.logoButton > img {
     border-radius: 50%;
     height: 100%;
     width: 48px;
 }
 
-.logoHref  {
+.logoButton > h1  {
     font-size: 1.5rem;
 }
 
-.button:hover {
-    background-color: #363636;
+.loginButton {
+    border: none;
+    padding: 0.5rem 1rem;
+    display: flex;
+    justify-content: center;
+    font-size: 1rem;
+    border-radius: 10px;
+    transition: all 0.5s ease;
+    background-color: var(--blurple);
+}
+
+.loginButton:hover {
+    background-color: var(--blurple-hover)
+}
+
+@media (max-width: 768px) {
+    .navbar {
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
+    .button {
+        padding: 0px;
+    }
+    .logoButton {
+        padding: 0px;
+    }
 }
