--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,6 +31,18 @@ a {
   }
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--button-hover);
+  border-radius: 10px;
+}
+::-webkit-scrollbar-track {
+  background-color: var(--background);
+}
+
 body {
   background: var(--background);
   transition: background 1s;
@@ -38,9 +50,25 @@ body {
   font-family: 'Noto Sans KR', sans-serif;
 }
 
+* {
+  transition: all 1s ease;
+}
+
 .center {
   margin-left: 15%;
   margin-right: 15%;
+}
+
+.container {
+  min-height: calc(100vh - (48px + 1rem));
+  padding-top: 2rem;
+}
+
+@media (max-width: 1280px) {
+  .center {
+    margin-left: 5%;
+    margin-right: 5%;
+  }
 }
 
 @media (max-width: 768px) {
@@ -50,9 +78,8 @@ body {
     padding-left: 1rem;
     padding-right: 1rem;
   }
-}
-
-.container {
-  min-height: calc(100vh - (48px + 1rem));
-  padding-top: 2rem;
+  .container {
+    min-height: calc(100vh - (48px + 1rem));
+    padding-top:  1rem;
+  }
 }
