refactor(dashboard/index): remove getServerSideProps, replace react-query feat(dashboard/[...guildId]): add guild route

--- a/src/pages/dashboard/index.module.css
+++ b/src/pages/dashboard/index.module.css
@@ -5,4 +5,16 @@
 
 .guildSelectContainer {
     margin: 1rem 0 0 0;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+}
+
+@media (max-width: 768px) {
+    .titleTypo {
+        text-align: center;
+    }
+    .guildSelectContainer {
+        display: block
+    }
 }
